<resources>
    <string name="app_name">ZeitBlickApp</string>


    <string name="menu_item_intent_camera">Intent Camera</string>
    <string name="menu_item_camera_2">Camera2 App</string>

    <string name="take_photo_take_photo">Take Photo</string>
    <string name="present_photo_fragment_los_gehts">los geht\'s</string>
    <string name="present_photo_fragment_nochmal">Nochmal!</string>
    <string name="present_photo_fragment_zeitblick">Zeitblick</string>

    <string name="picture">Prend Picture!!</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="switch_camera">This button switches the camera.</string>
    <string name="set_camera_flash">This button sets the flash for the camera.</string>


    <string name="text_icon_intro">Zeitblick</string>
    <string name="text_present_photo_abbort">Nochmal</string>
    <string name="text_present_photo_accept">Los gehts</string>
    <string name="message_error">"Something blöd happened, try again"</string>


    <!-- fragment information -->
    <string name="info_collapsing_toolbar">collapsing toolbar</string>
    <string name="info_unknown_content">Unbekannt</string>
    <string name="info_link_text">on Mkg sammlung online</string>
    <string name="info_title">Title</string>
    <string name="info_artist">Artist</string>
    <string name="info_location">Location</string>
    <string name="info_description">Description</string>
    <string name="info_licence">Licence</string>
    <string name="info_link">Link</string>
    <string name="info_"></string>

    <!-- fragment option -->
    <!-- //todo set strings here !! -->

    <!-- api facebook -->
    <string name="facebook_app_id">153002768499630</string>

</resources>
