<?xml version="1.0" encoding="utf-8"?>

<!-- //todo ce fragment devrait etre en immersive mode -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">




    <!-- icone et hamburger menu -->
    <LinearLayout
        android:id="@+id/linearLayoutUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center|top"
        android:layout_marginBottom="30dp">

        <ImageButton
            android:id="@+id/ibtt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            app:srcCompat="@android:drawable/ic_menu_always_landscape_portrait"
            android:background="@android:color/transparent"
            android:contentDescription="@string/set_camera_flash"/>

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/zeitblick_icon"
            android:background="@android:color/transparent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"/>

    </LinearLayout>




    <!-- //todo cadre blanc -->
    <com.github.siyamed.shapeimageview.RoundedImageView
        android:id="@+id/iv_taken_photo"
        android:layout_width="349dp"
        android:layout_height="314dp"
        app:srcCompat="@mipmap/zeitblick_icon"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="15dp"
        app:siRadius="60dp"
        app:siBorderWidth="60dp"
        app:siBorderColor="@color/textColor"
        app:siSquare="true"
        android:layout_marginTop="16dp" />

    <!-- Button to continue //todo Ce bouton doit etre rond, fond noir, lisierere blanche-->
    <Button
        android:text="@string/present_photo_fragment_los_gehts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="bottom|center"
        android:id="@+id/btt_los_gehts"
        android:textColor="@color/textColor"
        android:textSize="@dimen/los_gehts_present_fragment"
        android:background="@drawable/roundedbutton"
        android:textAllCaps="false"
        android:layout_marginTop="32dp" />

    <!-- Button to take a photo again -->
    <Button
        android:text="@string/present_photo_fragment_nochmal"
        style="?android:attr/borderlessButtonStyle"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btt_nochmal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="bottom|center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/nochmal_present_fragment"
        android:textAllCaps="false"
        android:layout_marginTop="8dp" />

</FrameLayout>