<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColor"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_information"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_matching_mkg_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_information"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view_information"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_matching_mkg_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="8dp"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/info_title"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/information_layout_bottom_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_artist_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/info_artist"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/information_header_text_size" />

                <TextView
                    android:id="@+id/tv_artist_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/information_content_text_size"
                    android:typeface="serif" />
            </LinearLayout>

            <include layout="@layout/separator" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/information_layout_bottom_margin"
                android:layout_marginTop="@dimen/information_layout_top_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_location_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/info_location"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/information_header_text_size" />

                <TextView
                    android:id="@+id/tv_location_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/information_content_text_size"
                    android:typeface="serif" />
            </LinearLayout>

            <include layout="@layout/separator" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/information_layout_bottom_margin"
                android:layout_marginTop="@dimen/information_layout_top_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_description_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/info_description"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/information_header_text_size" />

                <TextView
                    android:id="@+id/tv_description_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/information_content_text_size"
                    android:typeface="serif" />
            </LinearLayout>

            <include layout="@layout/separator" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/information_layout_top_margin"
                android:layout_marginBottom="@dimen/information_layout_bottom_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_licence_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/info_licence"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/information_header_text_size" />

                <TextView
                    android:id="@+id/tv_licence_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/information_content_text_size"
                    android:typeface="serif" />
            </LinearLayout>


            <include layout="@layout/separator" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/information_layout_top_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_link_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/info_link"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/information_header_text_size" />


                <org.sufficientlysecure.htmltextview.HtmlTextView
                    android:id="@+id/tv_link_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/information_content_text_size"
                    android:typeface="serif"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:borderWidth="0dp"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@color/textColor"
        app:layout_anchor="@id/app_bar_layout_information"
        android:src="@mipmap/btt_share_v2"
        app:layout_anchorGravity="bottom|right|end" />


</android.support.design.widget.CoordinatorLayout>